# single_binary_opencl_example

./: CMakeLists.txt  README.md
cmake/: preprocess_kernel.cmake
cmake/scripts/: preprocess_kernel.cmake  preprocessed_kernel.template
include/kernels/: add.cl
src/: main.cpp
